# QMetaWatchManagerConsole

./: CMakeLists.txt
assets/qml/: main.qml
src/: CMakeLists.txt  devicetypemessage.cpp  devicetypemessage.h  main.cpp  watchpropertyoperationmessage.cpp  watchpropertyoperationmessage.h
src/core/: devicehandler.cpp  devicehandler.h  protocoldispatcher.cpp
src/gui/: bluetoothdiscoveryhandler.cpp  bluetoothdiscoveryhandler.h  bluetoothdiscoverymodel.cpp  bluetoothdiscoverymodel.h  bluetoothporthandler.cpp  bluetoothporthandler.h  mainwindowcontroller.cpp  mainwindowcontroller.h  metawatchhandler.cpp  metawatchhandler.h  metawatchscreenhandler.cpp  metawatchscreenhandler.h  portinfomodel.cpp  portinfomodel.h  serialporthandler.cpp  serialporthandler.h
tests/: CMakeLists.txt  devicetypemessagetest.cpp  protocoldispatchertest.cpp  watchpropertyoperationmessagetest.cpp
